Fix media and suggestions API
