# api/swagger/swagger.yaml
@@ -52,6 +52,43 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorSchema"
+  /users/create:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: users
+    post:
+      description: User Sign up
+      # used as the method name of the controller
+      operationId: createUser
+      consumes:
+        - multipart/form-data
+      parameters:
+        - in: formData
+          name: profile_img
+          type: file
+        - in: formData
+          name: user_name
+          type: string
+          required: true
+        - in: formData
+          name: user_email
+          type: string
+          format: email
+          pattern: (?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|"(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])
+          required: true
+        - in: formData
+          name: user_pass
+          type: string
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: object
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorSchema"
 
   /users/{userId}/tweets:
     # binds a127 app logic to a route
